# resolve

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh
backend/: .env.example  Cargo.toml
backend/.sqlx/: query-00d526d9794e3363780fc499d7333425f74131ab16eeef3db1ed0e0a75a83b75.json  query-04b1058ff9bd22d85319831d2af786d704a61e8900f9e3c783b2b9d398473cf2.json  query-05b4915ce6a6a30629677b72ab63789c5ab6ebc2f1eaa353bdca74710ede14e3.json  query-0a6f6857153de02aa51cc3543a41b3158535ffde8e807fbf23b89b10d6ca8c95.json  query-0a942f0acd1e599650370e76fc54ba042663092692a873bd8e619fdde10fcfd5.json  query-0b0842a33226e99a326e89dce352a170ec12f29c4847c307e5d67eb808a19e7c.json  query-0f240ec839b9efc0e22edc5c03ae235718bd99824cce9ef8e3ce22f73b19bf36.json  query-1167153b6618185d6202b5c77951cbbbae4790ec2196d7398d6dc55117dbb093.json  query-12b6247339f7daab85cb11f5051abe37eb9aa54a529f0fc13d81fed05586e6f5.json  query-15753b201c371b065fb2e39c4abf0a462e5b4321376097fd2bcaa06907f296d7.json  query-181db96b7d9e173ee79619b377f9795f8cf896edd5d1602e29a1ffdfebdf419b.json  query-196c10cf30a0be71ccb5361b8cccfdc378bbdb131cb1e7d52e1ff9b0b330f672.json  query-19f422119486304b011874824c6dcfd0f5c2b3deb8276649b85818c48c6cfc38.json  query-1fe89405cb8d2c5bdc1643b09b5124ad13f60df86852f539bc0935f3d5419e3f.json  query-21999ac44c51f2521d869d62984d69b684ffce7d98122330a351d7efff61d9d0.json  query-21a53ffbc12d9e5e9a171f2f282d832a872c704def7e89c46f6ac6edb7de69f9.json  query-21c6d35118d9ecf90e19f2e100cb0d35e4af9f425baec0937f5441b5d979ac33.json  query-29485039e08d3f9cd66c39efbcdff65daa32346f3421c5e11f18e07fe632f29f.json  query-2dba01d596c69be0135324d7910a963386e4d505d1bc7977281e3a0e27b7d3bf.json  query-2e99c71028296abcbf50d7d0a85c8cad84155a598b2143d58e417b811a7eb37e.json  query-2fa75d208e2e6e58316168c23857adac3301cd45920ca8c49a2f07cebafe1bba.json  query-3028d978e1df051846524995fb8ca2a803bf2f1a82e824930bbe8a6a747a8313.json  query-306f304d115eaa645135a0ce7102515cc910976406af00ff8d5808ae94777d3b.json  query-3077d6d0649f094eaefc21df41645dc1cf04960973a272ff31ba4f72c7ec136c.json  query-3472ff69665478685adfa014e5a997d1b65d45541ca766a3549bd302a74a8308.json  query-35b48dcf5340ca2102587143581d0ab4597336d985e5454309f7e4c3d0c2aa95.json  query-3ca98e168eaf951770292a29418c0bec75098e4077c642827ae6aac56b5b243b.json  query-40fabe206ed471edc3208afbc6c3c4d83b6a9e766f757e48e2bd0c874acc0b0a.json  query-42207c587b7662a2390653ae1f0ede204617b63b0a37f1a987c690f93db9eeb5.json  query-42513c5542065774d680a2a2196bb556539f180feae3cfe64d1d60d3afa5781a.json  query-425edc716e2939c7678e661c362dc8ee7e0473db74cb06ac9946e53da4397cd9.json  query-44624d9fd1b3b51bc845bc794b1443f464ff0b43f73a4063d90f356a7b723f52.json  query-44eb55d5d2825f87141fece9fc2025d21c647a6ea7001fa30c5dfa09aac2fa14.json  query-456bd54b050224300e69a1508dbc475b94fd2cc2f9e89dcaaf157e9d12fe1d72.json  query-4744158f42b50c0a530d2b7acd4ea41b05e6a12c5f099fd52711ea0a55ef423d.json  query-487e3d1933c4a4f2a2ff5e4b17d9e21caccf299c4080f8acc917dce7feb4d77d.json  query-48a54d26d0434f5f1f656fb7349fb2eef88b9745de56145c7ad2b68441567690.json  query-4d969552298db133ee01b34e3eeb49502f15ff78377580cf2f8449aabdc5eabb.json  query-4d994cc089e984b7d763a796934aa454016800fb3dc717501f39db3c6d2f4bf7.json  query-4ebafa14444afa4646454775ff656192cbdb5355d03be804ae5443b90d71b1fb.json  (+94 more)
backend/migrations/: 001_initial_schema.sql  002_bms_enhanced_schema.sql  003_portal_kb_notifications.sql  004_comprehensive_msp_schema.sql  20240101_000059_password_management.sql  20240102_000063_complete_asset_system.sql  20240103_000066_client_branding.sql  20240104_000068_file_system_custom_fields.sql  20240105_000070_network_integrations.sql  (+23 more)
backend/src/: error.rs  (+8 more)
frontend/: Cargo.toml  index.html
shared/: Cargo.toml
(+147 files in other folders)
