[package]
name = "resolve-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
resolve-shared = { path = "../shared" }
oauth2 = "4.4"
openidconnect = "4.0"
samael = "0.0.16"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
ring = "0.17"
aes-gcm = "0.10"
hex = "0.4"
url = "2.5"
mime = "0.3"
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-cron-scheduler = "0.13"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport", "pool", "hostname", "tracing"] }
imap = "3.0.0-alpha.15"
native-tls = "0.2"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
futures = "0.3"
thiserror = "1.0"
urlencoding = "2.1"
hmac = "0.12"
sha1 = "0.10"
mail-parser = "0.11"
regex = "1.10"
trust-dns-resolver = "0.23"
rustls = "0.21"
webpki-roots = "0.25"

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart", "stream"]

utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0", features = ["axum"] }
utoipa-redoc = { version = "3.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
httptest = "0.15"
mockall = "0.12"
tempfile = "3.8"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
serial_test = "3.0"