[package]
name = "resolve-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "resolve-frontend"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
gloo-net = "0.5"
gloo-storage = "0.3"
yew-hooks = "0.3"
gloo = "0.11"
gloo-timers = "0.3"
rust_decimal = { workspace = true }
resolve-shared = { path = "../shared" }

[dev-dependencies]
wasm-bindgen-test = "0.3"